--- a/Jsoup/app/src/main/res/values/strings.xml
+++ b/Jsoup/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_record">RecordActivity</string>
     <string name="title_activity_intro">IntroActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
